samples/_failures_safe/1761654179_a8ca02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b000e1b.c: In function ‘main’:
./samples/SAFE/__tmp_0b000e1b.c:132:5: error: expected declaration or statement at end of input
  132 |     if (!add_edge(&graph, 2, 5, 1)) return 1;
      |     ^~
